--- a/troubleshooting/TroubleshootingApplication/Jenkinsfile
+++ b/troubleshooting/TroubleshootingApplication/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
     }
     stage('Building image') {
       steps{
-        cd 'C:\Users\y509476\apimanagement\troubleshooting\TroubleshootingApplication'
+        cd 'C:/Users/y509476/apimanagement/troubleshooting/TroubleshootingApplication'
         script {
           docker.build registry + ":$BUILD_NUMBER"
         }
