--- a/troubleshooting/TroubleshootingApplication/Jenkinsfile
+++ b/troubleshooting/TroubleshootingApplication/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
   environment {
     registry = "divyabhaarathy/troubleshootingapplication-1.0"
-    registryCredential = ‘dockerhub’
+    registryCredential = "dockerhub"
   }
   agent any
   stages {
