--- a/troubleshooting/TroubleshootingApplication/Dockerfile
+++ b/troubleshooting/TroubleshootingApplication/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8
-ADD target/troubleshootingapplication-1.0.jar troubleshootingapplication-1.0.jar
+ADD C:/Users/y509476-er/apimanagement/troubleshooting/TroubleshootingApplication/target/troubleshootingapplication-1.0.jar troubleshootingapplication-1.0.jar
 EXPOSE 4343
 ENTRYPOINT ["java","-jar","troubleshootingapplication-1.0.jar"]
