--- a/troubleshooting/TroubleshootingApplication/Dockerfile
+++ b/troubleshooting/TroubleshootingApplication/Dockerfile
@@ -2,3 +2,4 @@ FROM openjdk:8
 ADD build/libs/troubleshootingapplication-1.0.jar troubleshootingapplication-1.0.jar
 EXPOSE 4343
 ENTRYPOINT ["java","-jar","troubleshootingapplication-1.0.jar"]
+#build/libs/troubleshootingapplication-1.0.jar troubleshootingapplication-1.0.jar
