--- a/troubleshooting/TroubleshootingApplication/Dockerfile
+++ b/troubleshooting/TroubleshootingApplication/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:8
-ADD build/libs/troubleshootingapplication-1.0.jar troubleshootingapplication-1.0.jar
+COPY /troubleshooting/TroubleshootingApplication/build/libs/troubleshootingapplication-1.0.jar troubleshootingapplication-1.0.jar
 EXPOSE 4343
 ENTRYPOINT ["java","-jar","troubleshootingapplication-1.0.jar"]
-#build/libs/troubleshootingapplication-1.0.jar troubleshootingapplication-1.0.jar
