Solving no manifest error

--- a/troubleshooting/TroubleshootingApplication/Jenkinsfile
+++ b/troubleshooting/TroubleshootingApplication/Jenkinsfile
@@ -3,7 +3,9 @@ pipeline {
     registry = "divyabhaarathy/troubleshootingapplication-1.0"
     registryCredential = "dockerhub"
   }
-  agent any
+  agent {
+    dockerfile true
+  }
   stages {
     stage('Cloning Git') {
       steps {
