--- a/troubleshooting/TroubleshootingApplication/build.gradle
+++ b/troubleshooting/TroubleshootingApplication/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.package.app.Class'
+        attributes 'Main-Class': 'sourcefiles.Application'
     }
 }
 
