--- a/troubleshooting/TroubleshootingApplication/Dockerfile
+++ b/troubleshooting/TroubleshootingApplication/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8
-COPY troubleshootingapplication-1.0.jar troubleshooting/TroubleshootingApplication/build/libs/troubleshootingapplication-1.0.jar
+ADD troubleshooting/TroubleshootingApplication/build/libs/troubleshootingapplication-1.0.jar troubleshootingapplication-1.0.jar
 EXPOSE 4343
 ENTRYPOINT ["java","-jar","troubleshootingapplication-1.0.jar"]
