Add existing file

--- a/troubleshooting/TroubleshootingApplication/build.gradle
+++ b/troubleshooting/TroubleshootingApplication/build.gradle
@@ -13,6 +13,14 @@ jar {
     }
 }
 
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'sourcefiles.Application'
+    }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 repositories {
     mavenLocal()
     maven {
