--- a/troubleshooting/troubleshootingtool/docker-compose.yml
+++ b/troubleshooting/troubleshootingtool/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: '2.2'
 services:
   troubleshootingapplication-1.0:
     image: "divyabhaarathy/troubleshootingtool-0.0.1"
@@ -7,11 +7,27 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.5.1
     container_name: elasticsearch
+    environment:
+      - node.name=elasticsearch
+      - cluster.name=es-docker-cluster
+      - bootstrap.memory_lock=true
+      - cluster.initial_master_nodes=elasticsearch
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - data01:/usr/share/elasticsearch/data
     ports:
-      - "9200:9200"
-      - "9300:9300"
+      - 9200:9200
     networks:
-      - my-network
+      - elastic
+
+volumes:
+  data01:
+    driver: local
 
 networks:
-  my-network:
+  elastic:
+    driver: bridge
