--- a/troubleshooting/troubleshootingtool/build.gradle
+++ b/troubleshooting/troubleshootingtool/build.gradle
@@ -8,8 +8,16 @@ group = 'com.example'
 version = '0.0.1'
 sourceCompatibility = '1.8'
 
+springBoot {
+    buildInfo()
+}
+
 repositories {
     mavenCentral()
+}
+
+ext {
+    set('elasticsearch.version', '7.5.1')
 }
 
 jar {
@@ -31,11 +39,14 @@ processResources {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter:1.5.9.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:1.5.9.RELEASE'
-    implementation 'org.elasticsearch:elasticsearch:6.4.0'
-    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:6.4.0'
+    implementation 'org.elasticsearch:elasticsearch:7.5.1'
+    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.5.1'
+    implementation 'org.elasticsearch.client:transport:7.5.1'
+
     implementation 'org.apache.logging.log4j:log4j-api:2.8.2'
     implementation 'org.apache.logging.log4j:log4j-core:2.8.2'
-    implementation 'org.elasticsearch.client:elasticsearch-rest-client:6.4.0'
-    implementation 'org.elasticsearch.client:elasticsearch-rest-client-sniffer:6.4.0'
+    implementation 'org.elasticsearch.client:elasticsearch-rest-client:7.5.1'
+    implementation 'org.elasticsearch.client:elasticsearch-rest-client-sniffer:7.5.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:1.5.9.RELEASE'
+
 }
