--- a/troubleshooting/troubleshootingtool/docker-compose.yml
+++ b/troubleshooting/troubleshootingtool/docker-compose.yml
@@ -4,6 +4,13 @@ services:
     image: "divyabhaarathy/troubleshootingtool-0.0.1"
     ports:
       - "4343:4343"
+    networks:
+      - elastic
+    depends_on:
+      - elasticsearch
+    links:
+      - elasticsearch
+
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.5.1
     container_name: elasticsearch
@@ -17,17 +24,10 @@ services:
       memlock:
         soft: -1
         hard: -1
-    volumes:
-      - data01:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
     networks:
       - elastic
 
-volumes:
-  data01:
-    driver: local
-
 networks:
   elastic:
-    driver: bridge
