--- a/troubleshooting/troubleshootingtool/build.gradle
+++ b/troubleshooting/troubleshootingtool/build.gradle
@@ -34,6 +34,8 @@ processResources {
     from('application/dist/') {
         into 'static'
     }
+    include 'application/static/'
+    exclude 'application/node_modules/'
     
 }
 
