--- a/troubleshooting/troubleshootingtool/build.gradle
+++ b/troubleshooting/troubleshootingtool/build.gradle
@@ -16,9 +16,9 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    set('elasticsearch.version', '7.5.1')
-}
+//ext {
+//    set('elasticsearch.version', '7.5.1')
+//}
 
 //jar {
 //    manifest {
