--- a/troubleshooting/troubleshootingtool/build.gradle
+++ b/troubleshooting/troubleshootingtool/build.gradle
@@ -34,7 +34,7 @@ processResources {
     from('application/dist/') {
         into 'static'
     }
-//    exclude 'application/node_modules/'
+    exclude 'application/node_modules/'
 }
 
 dependencies {
