--- a/troubleshooting/troubleshootingtool/build.gradle
+++ b/troubleshooting/troubleshootingtool/build.gradle
@@ -16,25 +16,27 @@ repositories {
     mavenCentral()
 }
 
-//ext {
-//    set('elasticsearch.version', '7.5.1')
-//}
+ext {
+    set('elasticsearch.version', '7.5.1')
+}
 
-//jar {
-//    manifest {
-//        attributes(
-//                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-//                'Main-Class': 'sourcefiles.Application'
-//        )
-//    }
-//    from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {}
-//}
+jar {
+    manifest {
+        attributes(
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': 'sourcefiles.Application'
+        )
+    }
+    from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {}
+}
+
+
 
 processResources {
+    exclude 'application/node_modules/'
     from('application/dist/') {
         into 'static'
     }
-//    exclude 'application/node_modules/'
 }
 
 dependencies {
