--- a/troubleshooting/troubleshootingtool/build.gradle
+++ b/troubleshooting/troubleshootingtool/build.gradle
@@ -30,6 +30,10 @@ jar {
     from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {}
 }
 
+bootJar{
+    exclude 'application/node_modules/'
+}
+
 
 
 processResources {
@@ -44,12 +48,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:1.5.9.RELEASE'
     implementation 'org.elasticsearch:elasticsearch:7.5.1'
     implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.5.1'
-//    implementation 'org.elasticsearch.client:transport:7.5.1'
-
-//    implementation 'org.apache.logging.log4j:log4j-api:2.8.2'
-//    implementation 'org.apache.logging.log4j:log4j-core:2.8.2'
-//    implementation 'org.elasticsearch.client:elasticsearch-rest-client:7.5.1'
-//    implementation 'org.elasticsearch.client:elasticsearch-rest-client-sniffer:7.5.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:1.5.9.RELEASE'
 
 }
