--- a/troubleshooting/troubleshootingtool/src/main/resources/application.properties
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.elasticsearch.cluster-name=
 spring.data.elasticsearch.cluster-nodes=
 server.port = 4343
+elasticsearch.host = 127.0.0.1:9200
