--- a/troubleshooting/troubleshootingtool/src/main/resources/application.properties
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.elasticsearch.cluster-name=
 spring.data.elasticsearch.cluster-nodes=
 server.port = 4343
-elasticsearch.host = fe80::7c78:d2b:dce:2a97%10
+elasticsearch.host = 127.0.0.1
+elasticsearch.port = 9200
