--- a/troubleshooting/troubleshootingtool/src/main/resources/application/package.json
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/package.json
@@ -25,6 +25,7 @@
     "angular-webstorage-service": "^1.0.2",
     "guid-typescript": "^1.0.9",
     "hammerjs": "^2.0.8",
+    "ngx-file-drop": "^8.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
