--- a/troubleshooting/troubleshootingtool/src/main/resources/application.properties
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.elasticsearch.cluster-name=
 spring.data.elasticsearch.cluster-nodes=
 server.port = 4343
-elasticsearch.host = 0.0.0.0
+elasticsearch.host = localhost
 elasticsearch.port = 9200
