Exploring reason for Internal server failure

--- a/troubleshooting/troubleshootingtool/docker-compose.yml
+++ b/troubleshooting/troubleshootingtool/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "4343:4343"
     networks:
       - elastic
+    environment:
+      - ElasticsearchHost=${ElasticsearchHost}
 
 networks:
   elastic:
