--- a/troubleshooting/troubleshootingtool/docker-compose.yml
+++ b/troubleshooting/troubleshootingtool/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - elastic
     environment:
       - ElasticsearchHost=${ElasticsearchHost}
+      - ElasticsearchPort=${ElasticsearchPort}
 
 networks:
   elastic:
